--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,12 +1,20 @@
 [package]
 name = "capmonster_cloud_client"
-version = "0.0.0"
+version = "0.1.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-reqwest = { version = "0.11.12", features = ["json"] }
-tokio = { version = "1.21.2", features = ["full"] }
-serde = { version = "1.0.147", features = ["derive"] }
-serde_json = "1.0.87"
+reqwest = { version = "0.11.13", features = ["json"] }
+tokio = { version = "1.23.0", features = ["full"] }
+serde = { version = "1.0.149", features = ["derive"] }
+serde_json = "1.0.89"
+serde_with_macros = "2.1.0"
+
+tracing = { version = "0.1.37", optional = true }
+tracing-subscriber = { version = "0.3.16", optional = true }
+
+[features]
+debug-output = ["dep:tracing", "dep:tracing-subscriber"]
+reserve_response_body = []
