--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,6 +24,7 @@ serde_with_macros = "3.9.0"
 tracing = { version = "0.1.40", optional = true }
 
 [dev-dependencies]
+tracing = { version = "0.1.40" }
 tracing-subscriber = "0.3.18"
 base64 = "0.22.1"
 image = "0.25.2"
