--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,10 +1,19 @@
 # https://doc.rust-lang.org/cargo/reference/manifest.html
 [package]
 name = "capmonster_cloud_client"
-version = "0.0.0"
-edition = "2021"
-authors = ["ZennoLab<support@zennolab.com>"]
-resolver = "2"
+version = "0.1.0"
+edition = "2024"
+resolver = "3"
+authors = ["ZennoLab <support@zennolab.com>"]
+repository = "https://github.com/ZennoLab/capmonstercloud-client-rust"
+description = "Capmonster Cloud client library for Rust."
+# documentation = "https://docs.rs/capmonster_cloud_client"
+readme = "README.md"
+keywords = [
+    "captcha",
+]
+categories = []
+license = "MIT OR Apache-2.0"
 
 autobins = false
 autoexamples = false
@@ -15,19 +24,24 @@ autobenches = false
 path="src/lib.rs"
 
 [dependencies]
-reqwest = { version = "0.12.7", features = ["json", "gzip"] }
-tokio = { version = "1.40.0", features = ["full"] }
-serde = { version = "1.0.210", features = ["derive"] }
-serde_json = "1.0.128"
-serde_with_macros = "3.9.0"
+reqwest = { version = "0.12.15", features = ["json", "gzip"] }
+tokio = { version = "1.44", features = ["full"] }
+serde = { version = "1.0.219", features = ["derive"] }
+serde_json = "1.0.140"
+serde_with_macros = "3.12.0"
 
-tracing = { version = "0.1.40", optional = true }
+tracing = { version = "0.1.41", optional = true }
 
 [dev-dependencies]
-tracing = { version = "0.1.40" }
-tracing-subscriber = "0.3.18"
+hyper = { version = "1.6.0", features = ["server"] }
+hyper-util = { version = "0.1.11", features = ["server"] }
+http = "1.3.1"
+http-body-util = "0.1.3"
+bytes = "1"
+tracing = { version = "0.1.41" }
+tracing-subscriber = "0.3.19"
 base64 = "0.22.1"
-image = "0.25.2"
+image = "0.25.6"
 
 [features]
 debug-output = ["dep:tracing"]
